adding to the pref_visualizer

--- a/app/src/main/res/xml/pref_visualizer.xml
+++ b/app/src/main/res/xml/pref_visualizer.xml
@@ -8,4 +8,11 @@
         android:title="Show Bass"
         />
 
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="show_treble"
+        android:summaryOff="Hidden"
+        android:summaryOn="Shown"
+        android:title="Show Treble"
+        />
 </PreferenceScreen>
